# BugViper

./: .env.example  .gitignore  ARCHITECTURE.md  CHAT_GUIDE.md  CLAUDE.md  Dockerfile.api  Dockerfile.ingestion  Dockerfile.ingestion.dockerignore  LICENSE  Makefile  QUERIES.md  README.md  cloudbuild.api.yaml  cloudbuild.ingestion.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  start.sh
1b/453580ac02/: metadata.json
2b/15377e30a0/: metadata.json
31/b56379fc6c/: metadata.json
63/b24b799024/: metadata.json
92/d85572a260/: metadata.json
95/32997396de/: metadata.json
api/: __init__.py  app.py  dependencies.py
api/agent/: graph.py  state.py  tools.py  utils.py
api/middleware/: firebase_auth.py
api/models/: rag.py  schemas.py
api/routers/: auth.py  debug.py  ingestion.py  query.py  rag.py  repository.py  support.py  webhook.py
api/services/: analysis_handlers.py  cloud_tasks_service.py  code_search.py  firebase_service.py  github_service.py  ingestion_dispatch.py  management_handlers.py  push_service.py  review_service.py
api/utils/: comment_formatter.py  graph_context.py
b2/2fab632e54/: metadata.json
bd/f99c6e33e9/: metadata.json
cb/b8854a1f6e/: metadata.json
code_review_agent/: config.py  prompts.py
code_review_agent/agent/: context.py  prompts.py  review_graph.py  review_prompt.py  runner.py  state.py  utils.py
code_review_agent/models/: agent_schemas.py
common/: __init__.py  call_skip.py  debug_log.py  debug_writer.py  diff_parser.py  embedder.py  firebase_init.py  firebase_models.py  github_client.py  job_models.py  job_tracker.py
db/: __init__.py  client.py  ingestion.py  queries.py  schema.py
deepagent/: config.py  prompts.py  review_pipeline.py
deepagent/agent/: review_pipeline.py
deepagent/models/: agent_schemas.py
e5/1dc488f365/: metadata.json
e6/64081d32bb/: metadata.json
examples/: example_usage.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: agent-chat.tsx  auth-guard.tsx  logo.tsx  sidebar.tsx
frontend/lib/: api.ts  auth-context.tsx  firebase.ts
ingestion/: __init__.py  code_search.py  github_client.py  graph_builder.py  language_query.py  repo_ingestion_engine.py
ingestion/core/: database.py
ingestion/handlers/: __init__.py  analysis_handlers.py  indexing_handlers.py  management_handlers.py
ingestion/languages/: c.py  cpp.py  csharp.py  go.py  haskell.py  java.py  javascript.py  kotlin.py  php.py  python.py  ruby.py  (+5 more)
ingestion_service/: app.py
src/: ingestion_pipeline.py
(+128 files in other folders)
