[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.40",
    "neo4j>=5.14.1",
    "openai>=1.6.1",
    "pathspec>=0.12.1",
    "pymilvus>=2.3.4",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.2",
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-java>=0.23.4",
    "tree-sitter-go>=0.23.3",
]
